# acpx-tui

./: CLAUDE.md  Cargo.toml  README.md
docs/plans/: 2026-03-14-acpx-integration-design.md  2026-03-14-acpx-tui-design.md  2026-03-14-acpx-tui-implementation.md  2026-03-16-agent-registry-design.md  2026-03-16-agent-registry-implementation.md
src/: agents.rs  app.rs  events.rs  main.rs  resume.rs  sessions.rs  ui.rs
