[package]
name = "acpx-tui"
version = "0.1.0"
edition = "2021"
description = "TUI dashboard for acpx sessions with one-click resume"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
